--- a/settings.json
+++ b/settings.json
@@ -8,7 +8,7 @@
     },
     "styles": [{}, {}, {}],
     // Local images can be dragged into the browser to quickly get the file protocol address from the address bar
-    "images": ["https://pathtoimage.png", "file:///C:/Users/hoang/Documents/C++/background.png"],
+    "images": ["https://pbs.twimg.com/media/FANh98PVIAEh39-?format=jpg&name=4096x4096", ""],
     "interval": 0,
     "random": false
   }
