--- a/.gitignore
+++ b/.gitignore
@@ -221,3 +221,4 @@ __marimo__/
 .streamlit/secrets.toml
 Excercises/random_problems.cpp
 .vscode/tasks.json
+Python UET/HoangMaiTuanHiep_25021756_TDTT
