--- a/.gitignore
+++ b/.gitignore
@@ -222,3 +222,4 @@ __marimo__/
 Excercises/random_problems.cpp
 .vscode/tasks.json
 Python UET/HoangMaiTuanHiep_25021756_TDTT
+.vscode/settings.json
