Add traversal method and improve min_var function in LinkedLists.py; update random_problems.cpp logic

--- a/.gitignore
+++ b/.gitignore
@@ -223,3 +223,4 @@ Excercises/random_problems.cpp
 .vscode/tasks.json
 Python UET/HoangMaiTuanHiep_25021756_TDTT
 .vscode/settings.json
+1762188103937.pdf
