add random_problem to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -226,3 +226,4 @@ Python UET/HoangMaiTuanHiep_25021756_TDTT
 1762188103937.pdf
 DSA.pdf
 Excercises/random_problem.py
+Excercises/random_problems.cpp
