--- a/.gitignore
+++ b/.gitignore
@@ -227,3 +227,4 @@ Python UET/HoangMaiTuanHiep_25021756_TDTT
 DSA.pdf
 Exercises/random_problem.py
 Exercises/random_problems.cpp
+Exercises/random_problems.cpp
