Update .gitignore and remove garbage

--- a/.gitignore
+++ b/.gitignore
@@ -228,3 +228,5 @@ DSA.pdf
 Exercises/random_problem.py
 Exercises/random_problems.cpp
 Exercises/random_problems.cpp
+OOP/oop.class
+OOP/temp.class
