--- a/.gitignore
+++ b/.gitignore
@@ -225,4 +225,4 @@ Python UET/HoangMaiTuanHiep_25021756_TDTT
 DSA.pdf
 Exercises/random_problem.py
 Exercises/random_problems.cpp
-OOP/*.class
+*.class
